#project(ParaToSPHARMMeshCLP)

set(ParaToSPHARMMeshCLP_SOURCE itkMeshTovtkPolyData.cxx vtkPolyDataToitkMesh.cxx)
set(ParaToSPHARMMeshCLP_LIBRARIES
       ${ITK_LIBRARIES}
       ${VTK_LIBRARIES}
       ShapeIO SpatialObject ShapeAlgorithms SpatialObject
       ${CLAPACK_LIBRARIES}
       )


if(SPHARM-PDM_BUILD_SLICER_EXTENSION)
    set(INSTALL_RUNTIME_DEST ${SlicerExecutionModel_DEFAULT_CLI_INSTALL_RUNTIME_DESTINATION})
    set(RUNTIME_OUTPUT_DIR ${SlicerExecutionModel_DEFAULT_CLI_RUNTIME_OUTPUT_DIRECTORY})
else()
    set(INSTALL_RUNTIME_DEST ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_RUNTIME_DESTINATION})
    set(RUNTIME_OUTPUT_DIR ${CMAKE_BINARY_DIR}/bin)
endif()


SEMMacroBuildCLI(
    NAME ParaToSPHARMMeshCLP
    EXECUTABLE_ONLY
    ADDITIONAL_SRCS ${ParaToSPHARMMeshCLP_SOURCE}
    TARGET_LIBRARIES ${ParaToSPHARMMeshCLP_LIBRARIES}
    LINK_DIRECTORIES ""
    INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${RUNTIME_OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
    INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DEST}
    INSTALL_LIBRARY_DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_LIBRARY_DESTINATION}
    INSTALL_ARCHIVE_DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_ARCHIVE_DESTINATION}
)

# GENERATECLP(ParaToSPHARMMeshCLP_SOURCE ParaToSPHARMMeshCLP.xml)

# add_executable(ParaToSPHARMMeshCLP ${ParaToSPHARMMeshCLP_SOURCE})

# target_link_libraries( ParaToSPHARMMeshCLP
#        ${ITK_LIBRARIES}
#        ${VTK_LIBRARIES}
#        ShapeIO SpatialObject ShapeAlgorithms SpatialObject
#        ${CLAPACK_LIBRARIES}
#        )

# if( NOT SPHARM-PDM_BUILD_SLICER_EXTENSION )
#   install(TARGETS
#     ParaToSPHARMMeshCLP
#     BUNDLE DESTINATION  bin
#     RUNTIME DESTINATION bin
#     LIBRARY DESTINATION lib
#     ARCHIVE DESTINATION lib/static  
#   )
# else()
#   install(TARGETS ParaToSPHARMMeshCLP DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_RUNTIME_DESTINATION} )
# endif()
