# CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# PROJECT(RadiusToMesh)

# FIND_PACKAGE(VTK REQUIRED)
# IF (VTK_FOUND)
#   INCLUDE(${VTK_USE_FILE})
# ELSE(VTK_FOUND)
#    MESSAGE(FATAL_ERROR, "VTK not found. Please set VTK_DIR.")
# ENDIF (VTK_FOUND)

# FIND_PACKAGE(GenerateCLP REQUIRED)
# IF (GenerateCLP_FOUND)
#   INCLUDE(${GenerateCLP_USE_FILE})
# ELSE(GenerateCLP_FOUND)
#    MESSAGE(FATAL_ERROR, "GenerateCLP not found. Please set GenerateCLP_DIR.")
# ENDIF (GenerateCLP_FOUND)

# GENERATECLP(RadiusToMesh.cxx RadiusToMesh.xml)
# ADD_EXECUTABLE(RadiusToMesh RadiusToMesh.cxx)

# TARGET_LINK_LIBRARIES(RadiusToMesh   ${VTK_LIBRARIES} )

# if( SPHARM-PDM_BUILD_SLICER_EXTENSION )
#   install(TARGETS RadiusToMesh DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_RUNTIME_DESTINATION} )
# endif()


SEMMacroBuildCLI(
NAME RadiusToMesh
EXECUTABLE_ONLY
ADDITIONAL_SRCS 
TARGET_LIBRARIES  ${VTK_LIBRARIES}
LINK_DIRECTORIES ""
INCLUDE_DIRECTORIES ""
RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
INSTALL_RUNTIME_DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_RUNTIME_DESTINATION}
INSTALL_LIBRARY_DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_LIBRARY_DESTINATION}
INSTALL_ARCHIVE_DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_ARCHIVE_DESTINATION}
)